--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"nodemon ."
+    "start": "nodemon ."
   },
   "keywords": [],
   "author": "",
@@ -34,5 +34,13 @@
     "multer": "^2.0.2",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Chijioke-Mekeachi/dormdashBackend.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Chijioke-Mekeachi/dormdashBackend/issues"
+  },
+  "homepage": "https://github.com/Chijioke-Mekeachi/dormdashBackend#readme"
 }
