--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "DormDash backend server",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon ."
   },
   "keywords": [],
   "author": "Chijioke Mekelachi",
